--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página de vendas</h1>
+    <p>Vendas = 50000,00</p>
     <a href="index.html">ir para página de vendas</a>
 </body>
 </html>
